feat: 完善 DDD 脚手架架构、安全与交付流程
重构领域边界、异常模型和应用服务模板。完善安全约束、Maven Central 产物、CI、文档及生成项目验证。